# bezier

./: .gitignore  AGENTS.md  CLAUDE.md  COMPANY.md  README.md  STATUS.md  org-chart.md
.claude/agents/: coo.md  head-of-product.md  persona-agency-designer.md  persona-design-engineer.md  persona-ds-lead.md  persona-handoff-engineer.md  persona-pm-cant-design.md  persona-review-stakeholder.md  persona-solo-maker.md  principal-designer.md  principal-engineer.md  qa-lead.md  ux-researcher.md
.codex/agents/: coo.toml  head-of-product.toml  persona-agency-designer.toml  persona-design-engineer.toml  persona-ds-lead.toml  persona-pm-cant-design.toml  persona-solo-maker.toml  principal-designer.toml  principal-engineer.toml  qa-lead.toml  ux-researcher.toml
.github/workflows/: ci.yml  release.yml
app/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
app/public/: bezier-inspect.js  bezier-preview-bridge.js  continuum-inspect.js  continuum-preview-bridge.js
app/scripts/: roundtrip.mjs
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  logging.rs  main.rs  path_grants.rs  snapshot_helper.m
app/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
app/src/components/: app-close-guard.tsx  app-sidebar.tsx  app-titlebar.tsx  bezier-mark.tsx  command-palette.tsx  error-logger.tsx  menu-shortcut-bridge.tsx  new-issue-modal.tsx  reload-shortcut.tsx  repo-picker.tsx  shortcuts-dialog.tsx  stage-stepper.tsx  (+1 more)
design/: design-system.md
design/brand/: 2026-06-12_brand-strategy.md  2026-06-12_design-tokens.md  2026-06-13_LP-design-brief-for-LLM.md  2026-06-13_LP-hero-concepts.md  PRINCIPLES.md
marketing/prelaunch-video/: 2026-06-25_creative-brief.md  README.md
playbook/: 2026-06-16_dogfood-feedback-backlog.md  approval-queue.md  decisions-log.md  ideas-backlog.md  product-roadmap.md  sync-protocol.md
playbook/operations/: 2026-06-04_issue-001-spike-report.md  2026-06-04_issue-001-spike-scope.md  2026-06-04_session-handoff.md  2026-06-05_issue-002-result.md  2026-06-05_issue-003-result.md  2026-06-05_issue-004-result.md  2026-06-05_issue-005-result.md  2026-06-05_local-engine-architecture.md  2026-06-08_session-handoff.md  2026-06-08_v0.1-build-report.md  2026-06-08_v0.1-implementation-plan.md  2026-06-08_v0.2-build-report.md  2026-06-08_v0.3-build-report.md  2026-06-08_v0.4-onlook-report.md  2026-06-11_v0.5-slice1-issues-spine-plan.md  2026-06-11_v0.5-slice2-implementation-loop-plan.md  2026-06-11_v0.5-slice2.5-preview-and-iterate-plan.md  2026-06-12_chat-first-iterate-loop-plan.md  2026-06-12_merge-safety-plan.md  2026-06-12_rebrand-session-handoff.md  2026-06-19_linkedin-designer-hiring-post.md
playbook/quality-reviews/: 2026-06-04_5cycle-review-round2.md  2026-06-04_ia-review-round1.md  2026-06-17_five-usecase-heuristic-review.md  2026-06-17_team-workflow-heuristic-review.md  2026-06-19_shared-recipient-heuristic-review.md  2026-06-23_persona-experience-review.md  2026-06-25_issue-006-agentic-map-ai-eng-review.md  2026-06-25_issue-006-agentic-map-cto-review.md
playbook/research/: 2026-06-04_mobbin-ai-work-apps.md  2026-06-08_competitive-landscape-orchestration-vs-design-sor.md  2026-06-08_oss-license-inventory.md  2026-06-13_agent-loop-from-zenn-article.md  2026-06-13_design-tab-analysis-and-proposal.md  2026-06-13_verify-ux-discovery-and-direction.md  2026-06-14_persona-reviews.md  2026-06-14_preview-saas-phase0-results.md  2026-06-14_publish-secrets-research.md  2026-06-14_share-content-ux-review.md  2026-06-14_share-publish-selfreview.md  2026-06-16_DF-5-share-redesign-spec.md  2026-06-16_live-current-view-ux.md  2026-06-16_precise-comment-mode-design.md  2026-06-16_repo-readiness-design.md  2026-06-18_preview-coverage-matrix.md  2026-06-18_preview-engineering-review.md  2026-06-19_agent-agnostic-design.md  2026-06-19_preview-open-changed-route-feasibility.md  2026-06-19_visual-editor-spec.md  2026-06-22_dogfood-distribution-gaps.md  2026-06-22_preview-attach-first-spec.md  2026-06-23_core-value-cto-audit.md  2026-06-23_maker-loop-rework-spec.md
playbook/strategy/: 2026-06-04_continuum-thesis-v1.md  2026-06-05_monetization-open-core.md  2026-06-11_coevolution-positioning-and-repo-sor-model.md  2026-06-12_preview-runner-roadmap.md  2026-06-14_preview-saas-scope.md  2026-06-15_design-process-gap-and-flexibility.md  2026-06-15_document-view-design.md  2026-06-17_share-architecture-options.md
product/: principles.md
product/issues/: ISSUE-001.md  ISSUE-002.md  ISSUE-003.md  ISSUE-004.md  ISSUE-005.md  ISSUE-006.md
product/specs/: 2026-06-04_app-ia-and-spec-driven-loop.md  2026-06-11_ia-and-issue-model.md
spike/: cli.mjs  extract.mjs  generate-preview.mjs  generate-sdk.mjs  generate.mjs  mcp-catalog.mjs  package-lock.json  package.json  scene-graph-schema-v1.json  screenshot-generic.mjs  screenshot-preview.mjs  shim-engine.mjs
(+194 files in other folders)
